; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/mvm/extr_mac80211.c_iwl_mvm_tdls_check_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/mvm/extr_mac80211.c_iwl_mvm_tdls_check_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_mvm = type { i32 }
%struct.ieee80211_vif = type { i32 }
%struct.iwl_fw_dbg_trigger_tlv = type { i64 }
%struct.iwl_fw_dbg_trigger_tdls = type { i32, i32, i64 }

@FW_DBG_TRIGGER_TDLS = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"TDLS event occurred, peer %pM, action %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_mvm*, %struct.ieee80211_vif*, i32*, i32)* @iwl_mvm_tdls_check_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_mvm_tdls_check_trigger(%struct.iwl_mvm* %0, %struct.ieee80211_vif* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.iwl_mvm*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.iwl_fw_dbg_trigger_tlv*, align 8
  %10 = alloca %struct.iwl_fw_dbg_trigger_tdls*, align 8
  store %struct.iwl_mvm* %0, %struct.iwl_mvm** %5, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %12 = getelementptr inbounds %struct.iwl_mvm, %struct.iwl_mvm* %11, i32 0, i32 0
  %13 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %6, align 8
  %14 = call i32 @ieee80211_vif_to_wdev(%struct.ieee80211_vif* %13)
  %15 = load i32, i32* @FW_DBG_TRIGGER_TDLS, align 4
  %16 = call %struct.iwl_fw_dbg_trigger_tlv* @iwl_fw_dbg_trigger_on(i32* %12, i32 %14, i32 %15)
  store %struct.iwl_fw_dbg_trigger_tlv* %16, %struct.iwl_fw_dbg_trigger_tlv** %9, align 8
  %17 = load %struct.iwl_fw_dbg_trigger_tlv*, %struct.iwl_fw_dbg_trigger_tlv** %9, align 8
  %18 = icmp ne %struct.iwl_fw_dbg_trigger_tlv* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %4
  br label %55

20:                                               ; preds = %4
  %21 = load %struct.iwl_fw_dbg_trigger_tlv*, %struct.iwl_fw_dbg_trigger_tlv** %9, align 8
  %22 = getelementptr inbounds %struct.iwl_fw_dbg_trigger_tlv, %struct.iwl_fw_dbg_trigger_tlv* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to i8*
  %25 = bitcast i8* %24 to %struct.iwl_fw_dbg_trigger_tdls*
  store %struct.iwl_fw_dbg_trigger_tdls* %25, %struct.iwl_fw_dbg_trigger_tdls** %10, align 8
  %26 = load %struct.iwl_fw_dbg_trigger_tdls*, %struct.iwl_fw_dbg_trigger_tdls** %10, align 8
  %27 = getelementptr inbounds %struct.iwl_fw_dbg_trigger_tdls, %struct.iwl_fw_dbg_trigger_tdls* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @BIT(i32 %29)
  %31 = and i32 %28, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %20
  br label %55

34:                                               ; preds = %20
  %35 = load %struct.iwl_fw_dbg_trigger_tdls*, %struct.iwl_fw_dbg_trigger_tdls** %10, align 8
  %36 = getelementptr inbounds %struct.iwl_fw_dbg_trigger_tdls, %struct.iwl_fw_dbg_trigger_tdls* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %48

39:                                               ; preds = %34
  %40 = load %struct.iwl_fw_dbg_trigger_tdls*, %struct.iwl_fw_dbg_trigger_tdls** %10, align 8
  %41 = getelementptr inbounds %struct.iwl_fw_dbg_trigger_tdls, %struct.iwl_fw_dbg_trigger_tdls* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = load i32*, i32** %7, align 8
  %44 = load i32, i32* @ETH_ALEN, align 4
  %45 = call i64 @memcmp(i32 %42, i32* %43, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %39
  br label %55

48:                                               ; preds = %39, %34
  %49 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %50 = getelementptr inbounds %struct.iwl_mvm, %struct.iwl_mvm* %49, i32 0, i32 0
  %51 = load %struct.iwl_fw_dbg_trigger_tlv*, %struct.iwl_fw_dbg_trigger_tlv** %9, align 8
  %52 = load i32*, i32** %7, align 8
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @iwl_fw_dbg_collect_trig(i32* %50, %struct.iwl_fw_dbg_trigger_tlv* %51, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32* %52, i32 %53)
  br label %55

55:                                               ; preds = %48, %47, %33, %19
  ret void
}

declare dso_local %struct.iwl_fw_dbg_trigger_tlv* @iwl_fw_dbg_trigger_on(i32*, i32, i32) #1

declare dso_local i32 @ieee80211_vif_to_wdev(%struct.ieee80211_vif*) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i64 @memcmp(i32, i32*, i32) #1

declare dso_local i32 @iwl_fw_dbg_collect_trig(i32*, %struct.iwl_fw_dbg_trigger_tlv*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
